<resources>
    <string name="app_name">netology project</string>
    <string name="nmedia">NMedia!</string>
    <string name="description_post_author_avatar">Avatar</string>
    <string name="chooser_repost_post">Repost</string>
    <string name="description_post_like" translatable="false">Like</string>
    <string name="description_post_cancel" translatable="false">Cancel</string>
    <string name="post_text" translatable="false">Text</string>
    <string name="author" translatable="false">Нетология. Унмверситет интернет-профессий</string>
    <string name="published" translatable="false">21 мая в 18:36</string>
    <string name="more">more</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_remove">Remove</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="likes" translatable="false">10</string>
    <string name="reposts" translatable="false">5</string>
    <string name="views" translatable="false">5</string>
    <string name="content" translatable="false">Привет, это новая Нетология! Когда-то Нетология начиналась с интенсивов по онлайн-маркетингу. Затем появились курсы по дизайну, разработке, аналитике и управлению. Мы растём сами и помогаем расти студентам: от новичков до уверенных профессионалов. Но самое важное остаётся с нами: мы верим, что в каждом уже есть сила, которая заставляет хотеть больше, целиться выше, бежать быстрее. Наша миссия — помочь встать на путь роста и начать цепочку перемен → http://netolo.gy/fyb</string>
    <string name="empty_posts" translatable="false">No posts</string>
    <string name="retry_loading" translatable="false">Retry loading</string>

</resources>